--- a/websandbox/src/index.css
+++ b/websandbox/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.node-child:hover .show-more {
+  visibility: visible !important;
+}
